Finalize gRPC API
Issue: #grpc
